--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Copy this file to .env and fill in your values
 # NEVER commit .env to version control!
 
-API_KEY=your_api_key_here
+# Vite environment variables (require VITE_ prefix)
+VITE_API_KEY=your_api_key_here
+VITE_API_URL=https://api.example.com
